vidoe list spacing and font fixes

--- a/blocks/mini-cards/mini-cards.css
+++ b/blocks/mini-cards/mini-cards.css
@@ -76,24 +76,38 @@
   padding-left: 4px;
 } 
 
+.image-list-variation .mini-card-container {
+  gap: var(--spacing-regular)
+}
+
+.image-list-variation .mc-text-wrapper{
+  gap:0;
+}
+
 .image-list-variation .mini-card {
   border-top: unset;
-  padding-bottom: var(--spacing-medium);
+  padding-block-start: unset;
+  padding-bottom: var(--spacing-regular);
   border-bottom: 2px solid var(--neutral-solid-10-s);
 }
 
-.image-list-variation .mini-card-title{
+.image-list-variation .mini-card-title {
   font-size: var(--font-size-600);
-  line-height: 24px;
+  line-height: 27px;
+  padding-bottom: var(--spacing-xsmall);
 }
 
+.image-list-variation .mini-card-tag {
+  line-height: 16px;
+  padding-bottom: 12px;
+}
+
+.image-list-variation .date-time-info {
+  line-height: 17.5px;
+}
 @media (width <768px) {
   .image-list-variation .mini-card .mc-text-wrapper {
     flex-basis: 450px;
-  }
-
-  .image-list-variation .date-time-info {
-    line-height: 16.8px;
   }
 }
 
@@ -102,8 +116,8 @@
     flex-basis: 710px;
   }
 
-  .image-list-variation .date-time-info {
-    line-height: 24px;
+  .image-list-variation .mini-card-title{
+    line-height: 30px;
   }
 }
 
@@ -125,10 +139,6 @@
   }
 
   .image-list-variation .mini-card-title{
-    line-height: 30px;
-  }
-  
-  .image-list-variation .date-time-info {
-    line-height: 16.8px;
+    line-height: 36px;
   }
 }
